--- a/appspec.yml
+++ b/appspec.yml
@@ -13,10 +13,10 @@ permissions:
        - file
 hooks:
    BeforeInstall:
-    - location: scripts/installapache.sh
+    - location: shellscript/installapache.sh
       runas: root
-    - location: scripts/startapache.sh
+    - location: shellscript/startapache.sh
       runas: root
    AfterInstall:
-    - location: scripts/restartapache.sh
+    - location: shellscript/restartapache.sh
       runas: root
